<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="key_dot">.</string>
    <string name="very_long_text">"Understand the Activity Lifecycle bookmark_border As a user navigates through, out of, and back to your app, the Activity instances in your app transition through different states in their lifecycle.</string>
    <string name="very_long_text_2">"The Activity class provides a number of callbacks that allow the activity to know that a state has changed: that the system is creating, stopping, or resuming an activity, or destroying the process in which the activity resides.  Within the lifecycle callback methods, you can declare how your activity behaves when the user leaves and re-enters the activity. For example, if youre building a streaming video player, you might pause the video and terminate the network connection when the user switches to another app. When the user returns, you can reconnect to the network and allow the user to resume the video from the same spot. In other words, each callback allows you to perform specific work thats appropriate to a given change of state. Doing the right work at the right time and handling transitions properly make your app more robust and performant. For example, good implementation of the lifecycle callbacks can help ensure that your app avoids:  Crashing if the user receives a phone call or switches to another app while using your app. Consuming valuable system resources when the user is not actively using it. Losing the user's progress if they leave your app and return to it at a later time. Crashing or losing the user's progress when the screen rotates between landscape and portrait orientation. This document explains the activity lifecycle in detail. The document begins by describing the lifecycle paradigm. Next, it explains each of the callbacks: what happens internally while they execute, and what you should implement during them. It then briefly introduces the relationship between activity state and a process’s vulnerability to being killed by the system. Last, it discusses several topics related to transitions between activity states.  For information about handling lifecycles, including guidance about best practices, see Handling Lifecycles with Lifecycle-Aware Components and Saving UI States. To learn how to architect a robust, production-quality app using activities in combination with architecture components, see Guide to App Architecture.  Activity-lifecycle concepts To navigate transitions between stages of the activity lifecycle, the Activity class provides a core set of six callbacks: onCreate(), onStart(), onResume(), onPause(), onStop(), and onDestroy(). The system invokes each of these callbacks as an activity enters a new state.  Figure 1 presents a visual representation of this paradigm.   Figure 1. A simplified illustration of the activity lifecycle.  As the user begins to leave the activity, the system calls methods to dismantle the activity. In some cases, this dismantlement is only partial; the activity still resides in memory (such as when the user switches to another app), and can still come back to the foreground. If the user returns to that activity, the activity resumes from where the user left off. With a few exceptions, apps are restricted from starting activities when running in the background.  The system’s likelihood of killing a given process—along with the activities in it—depends on the state of the activity at the time. Activity state and ejection from memory provides more information on the relationship between state and vulnerability to ejection.  Depending on the complexity of your activity, you probably don't need to implement all the lifecycle methods. However, it's important that you understand each one and implement those that ensure your app behaves the way users expect.  The next section of this document provides detail on the callbacks that you use to handle transitions between states.  "</string>
    <string name="key_CE">CE</string>
    <string name="key_C">C</string>
    <string name="key_DELETE">DELETE</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_multi">*</string>
    <string name="key_div">/</string>
    <string name="key_equally">=</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_equal">=</string>
    <string name="key_add">+</string>
    <string name="key_clear">AC</string>
    <string name="key_divide">/</string>
    <string name="key_para1">%</string>
    <string name="key_multip">×</string>
    <string name="key_para2">+/-</string>
    <string name="app_name">CalculatorAZ</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_light">light</string>
    <string name="key_dark">dark</string>
    <string name="key_change_activity">change_activity</string>
</resources>